# pranera_knit

./: .gitignore  DEPLOY.md  README.md  hooks.py  package.json  pyproject.toml  setup.py
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.bak
frontend/src/: App.vue  main.js
frontend/src/api/: frappe.js  frappe.js.bak
frontend/src/components/: AppHeader.vue
frontend/src/composables/: useSync.js  useSync.js.bak
frontend/src/db/: index.js  index.js.bak
frontend/src/pages/: NoAccessPage.vue
frontend/src/pages/collar-cuff-dashboard/: CollarCuffDashboardPage.vue
frontend/src/pages/create-qi/: CreateQIPage.vue  CreateQIPage.vue.bak
frontend/src/pages/create-roll/: CreateRollPage.vue  CreateRollPage.vue.bak  CreateRollPage.vue.bak6
frontend/src/pages/dashboard/: DashboardPage.vue
frontend/src/router/: index.js  index.js.bak
frontend/src/stores/: auth.js  home.js  home.js.bak  pickList.js  qualityInspection.js  roll.js
pranera_knit/: hooks.py  job_card_events.py  job_card_permissions.py  modules.txt  patches.txt  utils.py
pranera_knit/api/: knit.py  yarn_consumption.py
pranera_knit/fixtures/: custom_field.json
pranera_knit/knit_module/: knit_module.json
pranera_knit/public/css/: knit_app.css
pranera_knit/public/js/: knit_app.js
pranera_knit/public/knit_app/: index.css  index.html  index.js  index2.css  index3.css  index4.css  index5.css  index6.css  index7.css  index8.css  manifest.webmanifest  registerSW.js  sw.js
pranera_knit/www/: knit-app.html  knit-app.py  manifest.json  sw.js
(+24 files in other folders)
